<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <DUT Name="ST_PyAdsConfig" Id="{ec33ba99-a68a-4559-b930-ae98819283b6}">
    <Declaration><![CDATA[TYPE ST_PyAdsConfig :
STRUCT
	sDatabase: STRING;
	sTypeDatabase: STRING;
	sHost: STRING;
	sUser: STRING;
	sPassword: STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>